--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.pfccap.education.presentation.auth.ui.fragments.Login">
+    tools:context=".presentation.auth.ui.fragments.ResetPasswordFragment">
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -26,14 +26,14 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="0.3"
+            android:layout_weight="0.5"
             android:src="@drawable/logo" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
-            android:layout_weight="0.7"
+            android:layout_weight="0.5"
             android:orientation="vertical">
 
             <!-- Email Label -->
@@ -42,49 +42,34 @@
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/authLoginTxtEmail"
+                    android:id="@+id/authResetTxtEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/email"
                     android:inputType="textEmailAddress" />
             </android.support.design.widget.TextInputLayout>
 
-            <!-- Password Label -->
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp">
-
-                <EditText
-                    android:id="@+id/authLoginTxtPassword"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/password"
-                    android:inputType="textPassword" />
-            </android.support.design.widget.TextInputLayout>
-
             <Button
-                android:id="@+id/authBtnLogin"
+                android:id="@+id/authBtnResetPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:padding="12dp"
                 style="@style/BtnPpal"
-                android:text="@string/login" />
+                android:text="@string/recordar_contrasena" />
 
             <TextView
-                android:id="@+id/authLinkSignup"
+                android:id="@+id/authLinkSignIn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:textColor="@color/colorPrimary"
                 android:gravity="center"
-                android:text="@string/sign_up"
+                android:text="@string/tienes_cuenta"
                 android:textSize="16sp" />
 
         </LinearLayout>
 
     </LinearLayout>
-
 
 </FrameLayout>
