--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,7 +4,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 android:id="@+id/toolbart"
 android:layout_width="match_parent"
 android:layout_height="?attr/actionBarSize"
-android:background="@color/primary_light"
+android:background="@color/colorPrimaryLight"
 android:elevation="4dp"
 app:popupTheme="@style/AppTheme.PopupOverlay">
 
