--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF5252</color>
-    <color name="primary_light">#C5CAE9</color>
-    <color name="primary_text">#212121</color>
-    <color name="secondary_text">#757575</color>
-    <color name="icons">#FFFFFF</color>
-    <color name="divider">#BDBDBD</color>
+    <color name="colorPrimary">#8e24aa</color>
+    <color name="colorPrimaryDark">#5c007a</color>
+    <color name="colorAccent">#8e24aa</color>
+    <color name="colorPrimaryLight">#c158dc</color>
+    <color name="colorPrimaryText">#ffffff</color>
+    <color name="colorBlack">#080808</color>
+    <color name="colorGray">#CCCCCC</color>
 </resources>
