--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -7,4 +7,9 @@
         <item name="android:windowSharedElementEnterTransition">@android:transition/move</item>
         <item name="android:windowSharedElementExitTransition">@android:transition/move</item>
     </style>
+
+    <style name="BtnPpal" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
