--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="@bool/fitsSystemWindows"
-    tools:context="org.pfccap.education.presentation.main.ui.activities.MainActivity"
-    tools:openDrawer="start">
+    tools:context="org.pfccap.education.presentation.main.ui.activities.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,29 +15,33 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/status_bar_kitkat_height"
+            android:layout_height="@dimen/status_bar_height_kitkat"
             android:background="?colorPrimary" />
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/status_bar_lollipop_height"
+            android:layout_height="@dimen/status_bar_height_lollipop"
             android:background="?colorPrimaryDark" />
 
     </LinearLayout>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/status_bar_height">
 
-        <FrameLayout
-            android:id="@+id/fragment"
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/status_bar_height"
+            android:orientation="vertical">
 
-        <include layout="@layout/toolbar" />
+            <include layout="@layout/toolbar" />
 
-    </FrameLayout>
+            <FrameLayout
+                android:id="@+id/fragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                 />
+
+        </LinearLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation_view"
