--- a/app/src/main/res/layout/navigation_drawer_header.xml
+++ b/app/src/main/res/layout/navigation_drawer_header.xml
@@ -9,13 +9,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
-        android:layout_marginTop="20dp"
         android:background="@color/colorPrimary"/>
+
     <ImageView
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="@dimen/navigation_drawer_hearder_margin"/>
+        android:layout_marginTop="@dimen/navigation_drawer_header_margin"
+        android:scaleType="centerCrop"
+        android:src="@drawable/logo"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,6 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center_vertical"
+            android:textColor="@color/colorPrimary"
             android:text="Nombre Usuario"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
     </LinearLayout>
