--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,4 +3,6 @@
     <bool name="fitsSystemWindows">true</bool>
     <dimen name="navigation_drawer_header_margin">16dp</dimen>
     <dimen name="status_bar_height">0dp</dimen>
+    <dimen name="status_bar_height_kitkat">0dp</dimen>
+    <dimen name="status_bar_height_lollipop">0dp</dimen>
 </resources>
