se adiciona el registro

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -126,7 +126,7 @@
                             android:inputType="textPostalAddress" />
                     </android.support.design.widget.TextInputLayout>
                     <FrameLayout
-                        android:layout_width="0d"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.2">
                     <Button
