--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         <include layout="@layout/toolbar" />
 
         <FrameLayout
-            android:id="@+id/fragment"
+            android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
